--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
   "cmake.configureOnOpen": true,
-  "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/debug/build/compile_commands.json"
+  "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/debug/build/compile_commands.json",
+  "cSpell.words": [
+    "coreid",
+    "dannyk",
+    "Darsh",
+    "eabi",
+    "floatabi",
+    "ihex",
+    "Intelli",
+    "kitware",
+    "managedbuild",
+    "mcpu",
+    "mfloat",
+    "mfpu",
+    "nithinsenthil",
+    "OBJCOPY",
+    "sbrk",
+    "sysmem",
+    "useb",
+    "ZGTX"
+  ]
 }
