--- a/.cproject
+++ b/.cproject
@@ -104,7 +104,7 @@
 						</tool>
 					</fileInfo>
 					<sourceEntries>
-						<entry excluding="groundstation|determination/pos_lookup/sgp4/src/c/TestSGP4.c|determination/novasc3.1/solsys3.c|determination/novasc3.1/solsys2.c|determination/novasc3.1/solsys1.c|determination/novasc3.1/example.c|determination/novasc3.1/cio_file.c|determination/novasc3.1/checkout-stars-full.c|determination/novasc3.1/checkout-stars.c|determination/novasc3.1/checkout-mp.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="ADCS-Software"/>
+						<entry excluding="determination/pos_lookup/sgp4/src/c/TestSGP4.c|determination/novasc3.1/checkout-stars.c|determination/novasc3.1/solsys1.c|determination/novasc3.1/example.c|groundstation|determination/novasc3.1/solsys3.c|determination/novasc3.1/solsys2.c|determination/novasc3.1/checkout-stars-full.c|determination/novasc3.1/cio_file.c|determination/novasc3.1/checkout-mp.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="ADCS-Software"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Startup"/>
